# Linux_quad_template

./: CMakeCache.txt  cmake_install.cmake  main
RMP/: CMakeLists.txt  main.cpp  quadrupedMCL.xml
RMP/include/: Mathtool.h  MotionPolicy.h  controller.h  globals.h  kinematics.h  state.h  trajectory.h
RMP/source/: MotionPolicy.cpp  controller.cpp  globals.cpp  trajectory.cpp
